--- a/Barcode/MainWindow.xaml
+++ b/Barcode/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Barcode"
         mc:Ignorable="d"
-        Title="MainWindow" Height="505.819" Width="473.995">
+        Title="MainWindow" Height="505.819" Width="334.933">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition />
@@ -13,9 +13,9 @@
         </Grid.ColumnDefinitions>
 
         <StackPanel Orientation="Vertical" Margin="0,0,0,0.5">
-            <local:CamDeviceOperationControl x:Name="camDeviceCtrl" HorizontalAlignment="Left" Margin="0,10,0,0" VerticalAlignment="Top" Width="469"/>
+            <local:CamDeviceOperationControl x:Name="camDeviceCtrl" HorizontalAlignment="Left" Margin="0,10,0,0" VerticalAlignment="Top" Width="330"/>
             <Grid x:Name="ImageGrid" Background="Gray">
-                <Image x:Name="picture" HorizontalAlignment="Left" Height="246" VerticalAlignment="Top" Width="469"/>
+                <Image x:Name="picture" HorizontalAlignment="Left" Height="246" VerticalAlignment="Top" Width="328"/>
                 <Canvas x:Name="OverlayCanvas">
                     <Polygon x:Name="PolygonMark" Fill="Red" Stroke="DarkRed" StrokeThickness="5" Opacity="0.3" Points="0,0,100,100,0,100" />
                 </Canvas>
@@ -24,7 +24,7 @@
             <TextBox x:Name="BarcodeFormatText" Background="Azure" Padding="5" TextWrapping="Wrap" IsReadOnly="True" />
             <TextBlock Margin="5,10,0,0">Text</TextBlock>
             <TextBox x:Name="TextText" Background="Azure" Padding="5" TextWrapping="Wrap" IsReadOnly="True" />
-            <Button x:Name="BarcodeRead" Width="80" Content="BarcodeRead" Click="BarcodRead_Click" Margin="324,0,65,0" Height="30" />
+            <Button x:Name="BarcodeRead" Content="BarcodeRead" Click="BarcodRead_Click" Margin="205,0,0,0" Height="30" />
         </StackPanel>
     </Grid>
 </Window>
