--- a/Barcode/MainWindow.xaml
+++ b/Barcode/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Barcode"
         mc:Ignorable="d"
-        Title="MainWindow" Height="505.819" Width="334.933">
+        Title="MainWindow" Height="505.819" Width="334.933" Closing="Window_Closing">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition />
